--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\harsh\AppData\Local\Temp\testng-eclipse--181347687\testng-customsuite.xml</span>
+                    <span>C:\Users\harsh\AppData\Local\Temp\testng-eclipse-577899156\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="FunctionalTesting.DashboardTest" class="method navigator-link" hash-for-method="tc_001">tc_001</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="FunctionalTesting.PIMTest" class="method navigator-link" hash-for-method="tc_002">tc_002</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">FunctionalTesting.DashboardTest</span>
+              <span class="class-name">FunctionalTesting.PIMTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="tc_001">
-                  </a> <!-- tc_001 -->
-                  <span class="method-name">tc_001</span>
+                  <a name="tc_002">
+                  </a> <!-- tc_002 -->
+                  <span class="method-name">tc_002</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\harsh\AppData\Local\Temp\testng-eclipse--181347687\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\harsh\AppData\Local\Temp\testng-eclipse-577899156\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;FunctionalTesting.DashboardTest&quot;&gt;
+      &lt;class name=&quot;FunctionalTesting.PIMTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;tc_001&quot;/&gt;
+          &lt;include name=&quot;tc_002&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- FunctionalTesting.DashboardTest --&gt;
+      &lt;/class&gt; &lt;!-- FunctionalTesting.PIMTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'tc_001')
-data.setCell(0, 2, 'FunctionalTesting.DashboardTest')
-data.setCell(0, 3, 492);
+data.setCell(0, 1, 'tc_002')
+data.setCell(0, 2, 'FunctionalTesting.PIMTest')
+data.setCell(0, 3, 48218);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 492 ms</span>
+              <span class="suite-total-time">Total running time: 48 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -209,13 +209,33 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">tc_002</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Optional field</span>
+                <span class="reporter-method-output">Custom field</span>
+                <span class="reporter-method-output">Data import</span>
+                <span class="reporter-method-output">Reporting Methods</span>
+                <span class="reporter-method-output">Termination Reasons</span>
+                <span class="reporter-method-output">Employee List</span>
+                <span class="reporter-method-output">Add Employee</span>
+                <span class="reporter-method-output">Reports</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">FunctionalTesting.PIMTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">tc_001</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -224,27 +244,27 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">FunctionalTesting.DashboardTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">FunctionalTesting.PIMTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">preCondition</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">Login</span>
-                <span class="method-start">4947 ms</span>
+                <span class="method-start">5953 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">tc_001</span>
-                <span class="method-start">7090 ms</span>
+                <span class="method-name">tc_002</span>
+                <span class="method-start">6698 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">logout</span>
-                <span class="method-start">7591 ms</span>
+                <span class="method-name">Logout</span>
+                <span class="method-start">54929 ms</span>
               </div> <!-- configuration-method after -->
-              <div class="configuration-method after">
+              <div class="configuration-class after">
                 <span class="method-name">postCondition</span>
-                <span class="method-start">10023 ms</span>
-              </div> <!-- configuration-method after -->
+                <span class="method-start">56638 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
