--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">57,239</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">72,088</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">FunctionalTesting.PIMTest</td><td><a href="#m0">tc_002</a></td><td rowspan="1">1766038078347</td><td rowspan="1">48218</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">FunctionalTesting.PIMTest</td><td><a href="#m0">tc_001</a></td><td rowspan="1">1766056795890</td><td rowspan="1">6568</td></tr><tr class="passedeven"><td><a href="#m1">tc_002</a></td><td rowspan="1">1766056805359</td><td rowspan="1">49083</td></tr><tr class="passedeven"><td><a href="#m2">tc_003</a></td><td rowspan="1">1766056857729</td><td rowspan="1">5</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">FunctionalTesting.PIMTest#tc_002</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Optional field<br/>Custom field<br/>Data import<br/>Reporting Methods<br/>Termination Reasons<br/>Employee List<br/>Add Employee<br/>Reports</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">FunctionalTesting.PIMTest#tc_001</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">FunctionalTesting.PIMTest#tc_002</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Optional field<br/>Custom field<br/>Data import<br/>Reporting Methods<br/>Termination Reasons<br/>Employee List<br/>Add Employee<br/>Reports</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">FunctionalTesting.PIMTest#tc_003</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
